# longcontext-baseline

./: .gitignore  PARALLEL.md  README.md  create_data.py  paths_config.py  pyproject.toml
configs/: paths.yaml
ms_swift_train/: convert_to_swift_messages.py  run_sft.py
ms_swift_train/configs/: base.yaml
ms_swift_train/configs/128k/: clinc150.yaml  clinc150_ruler.yaml  hotpot_popqa.yaml  hotpot_qa.yaml  infinite_bench_mc.yaml  infinite_bench_qa.yaml  json_kv.yaml  ms_macro.yaml  nlu.yaml  nlu_msmacro.yaml  nq.yaml  nq_jsonkv.yaml  pop_qa.yaml  ruler_mk_uuid.yaml  trec_coarse.yaml  trec_infbenchmc.yaml  trivia_infbenchqa.yaml  trivia_qa.yaml
ms_swift_train/configs/64k/: clinc150.yaml  clinc150_ruler.yaml  hotpot_popqa.yaml  hotpot_qa.yaml  infinite_bench_mc.yaml  infinite_bench_qa.yaml  json_kv.yaml  ms_macro.yaml  nlu.yaml  nlu_msmacro.yaml  nq.yaml  nq_jsonkv.yaml  pop_qa.yaml  ruler_mk_uuid.yaml  trec_coarse.yaml  trec_infbenchmc.yaml  trivia_infbenchqa.yaml  trivia_qa.yaml
ms_swift_train/configs/megatron/: base.json
ms_swift_train/configs/megatron/128k/: clinc150_ruler.json  hotpot_popqa.json  nlu_msmacro.json  nq_jsonkv.json  trec_infbenchmc.json  trivia_infbenchqa.json
ms_swift_train/configs/megatron/64k/: clinc150_ruler.json  hotpot_popqa.json  nlu_msmacro.json  nq_jsonkv.json  trec_infbenchmc.json  (+1 more)
ms_swift_train/scripts/: download_model.sh  run_group.sh  train_all_128k.sh  train_all_64k.sh
vllm_inference/: evaluate.py  inference.py  utils.py
vllm_inference/scripts/: run_finetuned_inference.sh  run_inference.sh  run_inference_all.sh
